--- a/plush.cabal
+++ b/plush.cabal
@@ -89,18 +89,18 @@ Executable plush
     conduit >= 0.1.1 && < 0.2,
     containers >= 0.4.0 && < 0.5,
     directory >= 1.0.1 && < 1.2,
-    filepath >= 1.2.0 && < 1.3,
+    filepath >= 1.2.0 && < 1.4,
     hashable >= 1.1.2 && < 1.2,
     haskeline >= 0.6.2 && < 0.7,
     http-types >= 0.6.7 && < 0.7,
-    mtl >= 1.1.0 && < 2.1,
-    transformers >= 0.2.2 && < 0.3,
-    pretty >= 1.0.1 && < 1.1,
+    mtl >= 2.0 && < 2.2,
+    transformers >= 0.2.2 && < 0.4,
+    pretty >= 1.0.1 && <= 1.1.1.0,
     parsec >= 3.0.1 && < 3.2,
-    process >= 1.0.1 && < 1.1,
+    process >= 1.0.1 && <= 1.1.0.1,
     random >= 1.0.0 && < 1.1,
     text >= 0.11.1 && < 1.12,
-    unix >= 2.4.0 && < 2.5,
+    unix >= 2.4.0 && < 2.6,
     unordered-containers >= 0.1.4 && < 0.2,
     wai >= 1.0.0 && < 1.1,
     wai-middleware-static >= 0.0.1 && < 0.1,
@@ -121,12 +121,12 @@ Executable recho
     bytestring >= 0.9.1 && < 0.10,
     containers >= 0.3.0 && < 0.5,
     directory >= 1.0.1 && < 1.2,
-    filepath >= 1.2.0 && < 1.3,
-    mtl >= 1.1.0 && < 2.1,
-    process >= 1.0.1 && < 1.1,
+    filepath >= 1.2.0 && < 1.4,
+    mtl >= 2.0 && < 2.2,
+    process >= 1.0.1 && <= 1.1.0.1,
     text >= 0.11.1 && < 1.12,
-    transformers >= 0.2.2 && < 0.3,
-    unix >= 2.4.0 && < 2.5,
+    transformers >= 0.2.2 && < 0.4,
+    unix >= 2.4.0 && < 2.6,
     unordered-containers >= 0.1.4 && < 0.2
 
   ghc-options: -Wall -fno-warn-missing-signatures	-fwarn-tabs
