Force files to be read as UTF-8, regardless of locale.
This allows the tests to pass when run from a terminal without LC_ALL or
similar variables set.

--- a/plush.cabal
+++ b/plush.cabal
@@ -79,6 +79,7 @@ Executable plush
     Plush.Server.Utilities
     Plush.Types
     Plush.Types.CommandSummary
+    Plush.Utilities
 
   Build-depends:
     aeson >= 0.5.0 && < 0.7,
