new crazy FD reservation scheme
the main function is in a .c file that is run *before* GHC's runtime initializes
this allows us to reserve FDs 3-9 so GHC's runtime doesn't use them.
then in the code we  keep FDs 0-9 in use at all times so they don't get
used by the server accidentally

--- a/plush.cabal
+++ b/plush.cabal
@@ -44,12 +44,14 @@ Extra-source-files:
 
 Executable plush
   Main-is: Main.hs
+  
   hs-source-dirs: src
 
   Other-modules:
     Plush.DocTest
     Plush.Job
     Plush.Job.Output
+    Plush.Main
     Plush.Parser.Base
     Plush.Parser.Commands
     Plush.Parser.Tokens
@@ -108,7 +110,10 @@ Executable plush
     wai-middleware-route >= 0.2.0 && < 0.3,
     warp >= 1.0.0 && < 1.1
 
-  ghc-options: -Wall -threaded -fno-warn-missing-signatures -fwarn-tabs
+  C-sources:
+    src/main.c
+    
+  ghc-options: -no-hs-main -Wall -threaded -fno-warn-missing-signatures -fwarn-tabs
 
 
 
