fix additional file list so 'cabal sdist' will work

--- a/plush.cabal
+++ b/plush.cabal
@@ -32,10 +32,11 @@ Extra-source-files:
   README
   alltests.sh
   static/js/libs/README
-  static/js/libs/main.build.js
   static/js/libs/jquery/MIT-LICENSE
+  static/js/libs/hterm/LICENSE
   static/js/libs/require/LICENSE
   static/js/libs/underscore/LICENSE
+  static/js/main.build.js
 
 
 Executable plush
