--- a/plush.cabal
+++ b/plush.cabal
@@ -100,6 +100,8 @@ Executable plush
     haskeline >= 0.6.2 && < 0.8,
     http-types >= 0.6.7 && < 0.8,
     mtl >= 2.0 && < 2.2,
+    old-locale >= 1.0 && < 1.1,
+    time >= 1.4 && < 1.5,
     transformers >= 0.2.2 && < 0.4,
     pretty >= 1.0.1 && <= 1.1.1.0,
     parsec >= 3.0.1 && < 3.2,
