--- a/plush.cabal
+++ b/plush.cabal
@@ -91,23 +91,23 @@ Executable plush
     attoparsec >= 0.8.6 && < 0.11,
     base == 4.*,
     blaze-builder >= 0.3.0 && < 0.4,
-    bytestring >= 0.9.1 && < 0.10,
-    conduit >= 0.1.1 && < 0.5,
-    containers >= 0.4.0 && < 0.5,
-    directory >= 1.0.1 && < 1.2,
+    bytestring >= 0.9.1 && < 0.11,
+    conduit >= 0.1.1 && < 0.6,
+    containers >= 0.4.0 && < 0.6,
+    directory >= 1.0.1 && < 1.3,
     filepath >= 1.2.0 && < 1.4,
-    hashable >= 1.1.2 && < 1.2,
-    haskeline >= 0.6.2 && < 0.7,
-    http-types >= 0.6.7 && < 0.7,
+    hashable >= 1.1.2 && < 1.3,
+    haskeline >= 0.6.2 && < 0.8,
+    http-types >= 0.6.7 && < 0.8,
     mtl >= 2.0 && < 2.2,
     transformers >= 0.2.2 && < 0.4,
     pretty >= 1.0.1 && <= 1.1.1.0,
     parsec >= 3.0.1 && < 3.2,
-    process >= 1.0.1 && <= 1.1.0.1,
+    process >= 1.0.1 && < 1.1.1,
     random >= 1.0.0 && < 1.1,
     text >= 0.11.1 && < 1.12,
-    unix >= 2.4.0 && < 2.6,
-    unordered-containers >= 0.1.4 && < 0.2,
+    unix >= 2.4.0 && < 2.7,
+    unordered-containers >= 0.1.4 && < 0.3,
     wai >= 1.0.0 && < 1.3,
     wai-middleware-static >= 0.0.1 && < 0.2,
     wai-middleware-route >= 0.2.0 && < 0.3,
@@ -132,15 +132,15 @@ Executable recho
   Build-depends:
     aeson >= 0.5.0 && < 0.7,
     base == 4.*,
-    bytestring >= 0.9.1 && < 0.10,
-    containers >= 0.3.0 && < 0.5,
-    directory >= 1.0.1 && < 1.2,
+    bytestring >= 0.9.1 && < 0.11,
+    containers >= 0.3.0 && < 0.6,
+    directory >= 1.0.1 && < 1.3,
     filepath >= 1.2.0 && < 1.4,
     mtl >= 2.0 && < 2.2,
-    process >= 1.0.1 && <= 1.1.0.1,
+    process >= 1.0.1 && < 1.1.1,
     text >= 0.11.1 && < 1.12,
     transformers >= 0.2.2 && < 0.4,
-    unix >= 2.4.0 && < 2.6,
-    unordered-containers >= 0.1.4 && < 0.2
+    unix >= 2.4.0 && < 2.7,
+    unordered-containers >= 0.1.4 && < 0.3
 
   ghc-options: -Wall -fno-warn-missing-signatures	-fwarn-tabs
