--- a/plush.cabal
+++ b/plush.cabal
@@ -150,6 +150,7 @@ Executable recho
     containers >= 0.3.0 && < 0.6,
     directory >= 1.0.1 && < 1.3,
     filepath >= 1.2.0 && < 1.4,
+    hashable >= 1.1.2 && < 1.3,
     mtl >= 2.0 && < 2.2,
     process >= 1.0.1 && < 1.1.1,
     text >= 0.11.1 && < 1.12,
