--- a/plush.cabal
+++ b/plush.cabal
@@ -51,6 +51,7 @@ Library
     Plush.Main
 
   Other-modules:
+    Control.Monad.Exception
     Paths_plush
     Plush.DocTest
     Plush.DocTest.Posix
@@ -106,7 +107,6 @@ Library
     hashable >= 1.1.2 && < 1.3,
     haskeline >= 0.6.2 && < 0.8,
     http-types >= 0.6.7 && < 0.8,
-    mtl >= 2.0 && < 2.2,
     old-locale >= 1.0 && < 1.1,
     time >= 1.4 && < 1.5,
     transformers >= 0.2.2 && < 0.4,
@@ -165,7 +165,6 @@ Executable recho
     directory >= 1.0.1 && < 1.3,
     filepath >= 1.2.0 && < 1.4,
     hashable >= 1.1.2 && < 1.3,
-    mtl >= 2.0 && < 2.2,
     process >= 1.0.1 && < 1.1.1,
     text >= 0.11.1 && < 1.12,
     transformers >= 0.2.2 && < 0.4,
