reworked handling of pseudo terminals and standard IO for jobs

--- a/plush.cabal
+++ b/plush.cabal
@@ -58,6 +58,7 @@ Library
     Plush.Job
     Plush.Job.History
     Plush.Job.Output
+    Plush.Job.StdIO
     Plush.Job.Types
     Plush.Parser.Aliases
     Plush.Parser.Base
