--- a/plush.cabal
+++ b/plush.cabal
@@ -92,6 +92,7 @@ Library
     Plush.Server
     Plush.Server.API
     Plush.Server.Utilities
+    Plush.Server.Warp
     Plush.Types
     Plush.Types.CommandSummary
     Plush.Utilities
@@ -112,16 +113,19 @@ Library
     haskeline >= 0.6.2 && < 0.8,
     http-types >= 0.6.7 && < 0.8,
     old-locale >= 1.0 && < 1.1,
+    network >= 2.3 && < 2.5,
+    network-conduit >= 0.4 && < 0.7,
     time >= 1.4 && < 1.5,
     transformers >= 0.2.2 && < 0.4,
     pretty >= 1.0.1 && <= 1.1.1.0,
     parsec >= 3.0.1 && < 3.2,
     process >= 1.0.1 && < 1.1.1,
     random >= 1.0.0 && < 1.1,
+    simple-sendfile >= 0.2.4 && < 0.3,
     text >= 0.11.1 && < 1.12,
     unix >= 2.4.0 && < 2.7,
     unordered-containers >= 0.2.1 && < 0.3,
-    warp >= 1.0.0 && < 1.4
+    warp >= 1.0.0 && < 1.3.1.2
 
   -- New versions of ghc have bytestring-10, but old versions of wai-*
   -- have an upper limit at 0.9.
