--- a/plush.cabal
+++ b/plush.cabal
@@ -125,18 +125,9 @@ Library
     text >= 0.11.1 && < 1.12,
     unix >= 2.4.0 && < 2.7,
     unordered-containers >= 0.2.1 && < 0.3,
-    warp >= 1.0.0 && < 1.3.1.2
-
-  -- New versions of ghc have bytestring-10, but old versions of wai-*
-  -- have an upper limit at 0.9.
-  if impl(ghc >= 7.6)
-    Build-depends:
-      wai >= 1.2.0.2 && < 1.4,
-      wai-middleware-route >= 0.7.3 && < 0.8
-  else
-    Build-depends:
-      wai >= 1.0.0 && < 1.3,
-      wai-middleware-route >= 0.2.0 && < 0.3
+    wai >= 1.0.0 && < 1.4,
+    wai-middleware-route >= 0.2.0 && < 0.8,
+    warp >= 1.0.0 && < 1.4
 
   ghc-options: -Wall -threaded -fno-warn-missing-signatures -fwarn-tabs
 
