refactor all script execution into Plush.Run.Script

--- a/plush.cabal
+++ b/plush.cabal
@@ -86,6 +86,7 @@ Library
     Plush.Run.Posix
     Plush.Run.Posix.Utilities
     Plush.Run.Redirection
+    Plush.Run.Script
     Plush.Run.ShellExec
     Plush.Run.ShellFlags
     Plush.Run.TestExec
