default profile and env scripts
Create the ~/.plush directory, and profile and env scripts within it on login, if absent
added writeAllFile utility, and instances of PosixInStr and PosixOutStr for strict ByteString
bonus: use PS1 on command line

--- a/plush.cabal
+++ b/plush.cabal
@@ -13,6 +13,8 @@ Description:
 
 Data-files:
   data/summaries.txt
+  data/profile
+  data/env
   static/audio/*.ogg
   static/css/*.css
   static/css/*.gif
