--- a/plush.cabal
+++ b/plush.cabal
@@ -88,6 +88,7 @@ Library
     Plush.Run.Expansion
     Plush.Run.Pattern
     Plush.Run.Posix
+    Plush.Run.Posix.IO
     Plush.Run.Posix.Utilities
     Plush.Run.Redirection
     Plush.Run.Script
