control built-ins: break, continue, return, and exit
tests for break, continue, and return
handling return from scripts and functions
handling exit from main (but not yet from webui)
N.B.: handling for break and continue was in prior commits,
	just untested until now

--- a/plush.cabal
+++ b/plush.cabal
@@ -72,6 +72,7 @@ Library
     Plush.Resource
     Plush.Run.Annotate
     Plush.Run.BuiltIns
+    Plush.Run.BuiltIns.Control
     Plush.Run.BuiltIns.Evaluation
     Plush.Run.BuiltIns.FileSystem
     Plush.Run.BuiltIns.Grep
