--- a/plush.cabal
+++ b/plush.cabal
@@ -87,6 +87,7 @@ Library
     Plush.Run.Execute
     Plush.Run.ExecuteType
     Plush.Run.Expansion
+    Plush.Run.Expansion.Arithmetic
     Plush.Run.Pattern
     Plush.Run.Posix
     Plush.Run.Posix.IO
