Move the new return utilities into their own module

--- a/plush.cabal
+++ b/plush.cabal
@@ -92,6 +92,7 @@ Library
     Plush.Run.Pattern
     Plush.Run.Posix
     Plush.Run.Posix.IO
+    Plush.Run.Posix.Return
     Plush.Run.Posix.Utilities
     Plush.Run.Redirection
     Plush.Run.Script
