Handling Shell Errors during expansion
Created new Expansion monad
Now properly handling shell errors in a wide variety of cases (see doctests)
Handle divide by zero in arithmetic expansion
Handle the interesting case of commands with no command name that need to return the exit status of the last command in command substitution (if any)!

--- a/plush.cabal
+++ b/plush.cabal
@@ -88,6 +88,7 @@ Library
     Plush.Run.ExecuteType
     Plush.Run.Expansion
     Plush.Run.Expansion.Arithmetic
+    Plush.Run.Expansion.Types
     Plush.Run.Pattern
     Plush.Run.Posix
     Plush.Run.Posix.IO
