Local and remote plush server support
new modes:
  plush --local
  plush --remote <endpoint>

Support for start/stop/status on those modes
Support --quiet and --json ouptut from those modes

local runs plush detached, and can reconnected if still running
remote uses ssh master mode to connect, and establish a tunnel to a
	plush server running on a remote machine

establish the ~/.plush/server directory to hold state of servers
~/.plush/server/log for history of server actions

plush --servers

local server catches SIGTERM to exit cleanly
servers hunt for a free port if none speficied

refactored versions of Warp routines in Plush.Server.Warp

--- a/plush.cabal
+++ b/plush.cabal
@@ -103,8 +103,11 @@ Library
     Plush.Run
     Plush.Server
     Plush.Server.API
+    Plush.Server.Remote
+    Plush.Server.Status
     Plush.Server.Utilities
     Plush.Server.Warp
+    Plush.Server.WebServer
     Plush.Types
     Plush.Types.CommandSummary
     Plush.Utilities
