Change default build flag setting so all-in-one executable is built by default
The build flag changed from Production to live-files.
The default for cabal configure is for live-files to be false.
Improved the README to match both new build default, and to better explain using the --local and --remote options
Impoved the --help display a small bit w.r.t. --local and --remote options.

--- a/plush.cabal
+++ b/plush.cabal
@@ -41,8 +41,10 @@ Extra-source-files:
   static/js/main.build.js
 
 
-Flag Production
-  Description: build for production, without features for plush developers
+Flag live-files
+  Description:
+    Plush loads data files and serves static files from the datadir.
+    This allows development of those files without rebuilding plush.
   Default: False
 
 
@@ -146,8 +148,8 @@ Library
 
   ghc-options: -Wall -fno-warn-missing-signatures -fwarn-tabs
 
-  if flag(Production)
-    cpp-options: -DPRODUCTION
+  if flag(live-files)
+    cpp-options: -DLIVE_FILES
 
 
 Executable plush
