--- a/plush.cabal
+++ b/plush.cabal
@@ -121,30 +121,29 @@ Library
     base == 4.*,
     blaze-builder >= 0.3.0 && < 0.4,
     bytestring >= 0.9.1 && < 0.11,
-    conduit >= 0.1.1 && < 0.6,
     containers >= 0.4.0 && < 0.6,
     directory >= 1.0.1 && < 1.3,
     file-embed >= 0.0.4 && < 0.1,
     filepath >= 1.2.0 && < 1.4,
     hashable >= 1.1.2 && < 1.3,
     haskeline >= 0.6.2 && < 0.8,
-    http-types >= 0.6.7 && < 0.8,
+    http-types >= 0.6.7 && < 0.9,
     old-locale >= 1.0 && < 1.1,
     network >= 2.3 && < 2.5,
-    network-conduit >= 0.4 && < 0.7,
+    streaming-commons >= 0.1 && < 0.2,
     time >= 1.4 && < 1.5,
-    transformers >= 0.2.2 && < 0.4,
-    pretty >= 1.0.1 && <= 1.1.1.0,
+    transformers >= 0.2.2 && < 0.5,
+    pretty >= 1.0.1 && <= 1.1.1.1,
     parsec >= 3.0.1 && < 3.2,
-    process >= 1.0.1 && < 1.1.1,
+    process >= 1.0.1 && < 1.3,
     random >= 1.0.0 && < 1.1,
     simple-sendfile >= 0.2.4 && < 0.3,
     text >= 0.11.1 && < 1.12,
-    unix >= 2.4.0 && < 2.7,
+    unix >= 2.4.0 && < 2.8,
     unordered-containers >= 0.2.1 && < 0.3,
-    wai >= 1.0.0 && < 1.4,
+    wai >= 3.0.1 && < 3.1,
     wai-middleware-route >= 0.2.0 && < 0.8,
-    warp >= 1.0.0 && < 1.4
+    warp >= 3.0 && < 3.1
 
   ghc-options: -Wall -fno-warn-missing-signatures -fwarn-tabs
 
@@ -181,10 +180,10 @@ Executable recho
     directory >= 1.0.1 && < 1.3,
     filepath >= 1.2.0 && < 1.4,
     hashable >= 1.1.2 && < 1.3,
-    process >= 1.0.1 && < 1.1.1,
+    process >= 1.0.1 && < 1.3,
     text >= 0.11.1 && < 1.12,
-    transformers >= 0.2.2 && < 0.4,
-    unix >= 2.4.0 && < 2.7,
+    transformers >= 0.2.2 && < 0.5,
+    unix >= 2.4.0 && < 2.8,
     unordered-containers >= 0.2.1 && < 0.3
 
   ghc-options: -Wall -fno-warn-missing-signatures	-fwarn-tabs
